--- a/DS_SG.html
+++ b/DS_SG.html
@@ -11,9 +11,9 @@
 
 
 <div class="optb">
-<img src="DurhamUniversityLogo_WHITE.png" width="50%"></img>		
+<img src="DurhamUniversityLogo_WHITE.png" width="25%"></img>		
 
-<img src="LOGO-ERC_transp.png" width="36%"></img>
+<img src="LOGO-ERC_transp.png" width="18%"></img>
 
 </div>
     
@@ -27,33 +27,250 @@
 <br>
 <u><b>Aims</b></u><br>
 The goal is to produce a collaborative environment for discussions of recent developments about spectral gaps, that bring together groups of researchers with different perspectives and backgrounds.
-<br>
-All participants will be given fully catered accommodation at Collingwood College Durham.
 </div> 
 <div class="optb"> 
 <br>
-<u><b>Registration is closed</b></u><br>
-</div> 
-<div class="optb"> 
-<br>
-<u><b>Speakers</b></u><br>
-<b>Anshul Adve </b>(Princeton University)<br>
-<b>Mikhail Belolipetsky </b>(IMPA)<br> 
-<b>Sean Eberhard</b> (Queen's University Belfast)<br>
-<b>Sam Edwards</b> (Durham University)<br>
-<b>Alex Gamburd</b> (CUNY Graduate Center)<br>
-<b>Will Hide</b> (Durham University)<br>
-<b>Urban Jezernik</b> (University of Ljubljana)<br>
-<b>Petr Kravchuk</b> (King's College London)<br>
-<b>Ursula Hamenstadt</b> (University of Bonn)<br>
-<b>Dalimil Mazac</b> (IAS Princeton)<br>
-<b>Wenyu Pan</b> (University of Toronto)<br>
-<b>Ori Parzanchevski</b> (Hebrew University of Jerusalem)<br>
-<b>Bram Petri</b> (IMJ and Sorbonne University)<br>
-<b>Julia Slipantschuk</b> (University of Warwick)<br>
-<b>Nikhil Srivastava</b> (UC Berkeley)<br>
-<b>Yunhui Wu</b> (Tsinghua University) <br>
-<b>Nina Zubrilina</b> (Princeton University)<br>
+<table class="optb" style="width: 90%">
+
+    <colgroup>
+       <col span="1" style="width: 16%;">
+       <col span="1" style="width: 24%;">
+       <col span="1" style="width: 60%;">
+    </colgroup>
+<tr>
+<td><u><b>Speakers</b></u><br></td> <td>Affiliation</td>  <td><b>Titles and Abstracts</b></td>	
+</tr>
+<tr>
+<td><b>Anshul Adve </b></td><td>Princeton University</td><td><b>A spectral gap for spinors on hyperbolic surfaces</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+I'll describe a sequence of hyperbolic surfaces with a choice of spin structure and with genus going to infinity, such that the bottom eigenvalue of the Laplacian on spinors is uniformly bounded below. The surfaces can be taken to be arithmetic. A fun feature of the construction is that it makes use of four different perspectives on Riemann surfaces: algebraic, complex analytic, geometric, and arithmetic. Along the way we'll see that when the Riemann surface in question is sufficiently symmetric, one can pass between these perspectives in an explicit and fruitful manner. This is joint with Vikram Giri.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Mikhail Belolipetsky </b></td><td>IMPA</td><td><b>Geometric expanders</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+In a joint work with Hannah Albert we showed that closed arithmetic hyperbolic 3-dimensional orbifolds with larger and larger volumes give rise to triangulations of the underlying spaces whose 1-skeletons are harder and harder to embed nicely in Euclidean space. This is achieved by generalizing an inequality of Gromov and Guth to hyperbolic n-orbifolds and finding nearly optimal geodesic triangulations of arithmetic hyperbolic 3-orbifolds. The relation between the euclidean embeddings and expander graphs goes back to the pioneering work of Kolmogorov and Barzdin from the 1960s. In the talk I will discuss these results with an emphasis on some related open problems.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Sean Eberhard</b></td><td>Queen's University Belfast</td><td><b>Babai's conjecture for classical groups with random generators, part 2</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+Consider G = SL_n(q) acting on V \ {0}, where V = F_q^n is the defining module, and consider the Schreier graph defined by k random elements x_1, ..., x_k \in G. In this talk we will show that the there is a spectral gap with high probability provided that k is larger than a constant depending only on q. More precisely we will show that the second largest eigenvalue of the normalized adjacency matrix is bounded by (1+o(1)) q sqrt(2k-1)/k. The argument is based on the classical trace method approach of Broder and Shamir (1987), suitably adapted to the linear setting. Analogous results hold for other classical groups and for the action on r-tuples of vectors for bounded r, which is a linear analogue of a result for S_n of Friedman, Joux, Roichman, Stern, and Tillich (1998). Time permitting we will also outline these generalizations. As an application we prove Babai's conjecture on the diameter of simple classical groups for generating sets which include both a bounded-degree element and sufficiently many random generators. Joint work with Urban Jezernik.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Sam Edwards</b></td><td>Durham University</td><td><b>The bottom of the L^2 spectrum of higher-rank locally symmetric spaces</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+For a rank one geometrically finite locally symmetric space Γ\X, the bottom of the L^2 spectrum of the Laplace operator is a simple eigenvalue corresponding to a positive eigenfunction if and only if the critical exponent of Γ is strictly greater than half the volume entropy of X. In particular, there exist infinite volume rank one locally symmetric spaces with square integrable positive Laplace eigenfunctions. In contrast, a higher-rank symmetric space Γ\X without rank one factors has a square integrable positive Laplace eigenfunction if and only Γ is a lattice.  We will explain some aspects of the connection between square integrability of positive Laplace eigenfunctions and Patterson-Sullivan and Bowen-Margulis-Sullivan measures in the higher-rank setting. Based on joint work with Oh and Fraczyk-Lee-Oh.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Alex Gamburd</b></td><td>CUNY Graduate Center</td><td><b></b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+To appear</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Will Hide</b></td><td>Durham University</td><td><b>Spectral gaps for random covers of hyperbolic surfaces</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+Based on joint work with Michael Magee.<br>
+We study the spectrum of the Laplacian for finite-area hyperbolic surfaces, focusing on the spectral
+gap, i.e. the smallest non-zero element of the spectrum. The spectral gap can be viewed as a measure
+of how highly connected a surface is, providing control over its diameter and Cheeger constant. It
+controls the rate of mixing of the geodesic flow and error terms in geodesic counting. For large genus
+compact surfaces, 1/4
+is the asymptotically optimal spectral gap.<br>
+
+In a close analogy with results for random regular graphs, we study uniformly random Riemannian
+coverings of a fixed non-compact finite-area hyperbolic surface X. We show that for any ϵ > 0, a
+random degree-n cover has no Laplacian eigenvalues below 1/4
+ −  ϵ other than those of X and with the
+same multiplicity, with probability tending to 1 as n tends to infinity. As a consequence, we are able
+to prove the existence of sequences of compact surfaces with genus tending to infinity and spectral gap
+tending to 1/4
+, confirming a conjecture of Buser.<br>
+I will discuss some ideas of the proofs as well as some further questions.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Urban Jezernik</b></td><td>University of Ljubljana</td><td><b>Babai's conjecture for classical groups with random generators, part 1</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+The diameter of a finite group G equipped with a generating set S is the smallest number k so that every element of G can be written as a product of at most k elements from S. Babai's conjecture predicts that diameters of finite simple groups should be polylogarithmic in the size of the group. Much is known about this conjecture, yet it is still open for the family of groups PSL_n(F_q) as n tends to infinity and q is fixed. We investigate this family in the generic situation when the generating sets consist of random elements and prove that Babai's conjecture holds in this case. Our argument naturally splits into two parts: first we show how to quickly get a transvection using random elements, and second we use spectral gaps to quickly get all other transvections and complete the proof. In this talk, we will gently introduce the problem, outline the strategy of our argument for PSL_n(F_q), and give some details on the first part of the proof. Joint work with Sean Eberhard.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Petr Kravchuk</b></td><td>King's College London</td><td><b></b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+To appear</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Ursula Hamenstadt</b></td><td>University of Bonn</td><td><b>Spectral gap and eigenfunctions on hyperbolic 3-manifolds</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+We summarize what is known about the spectral gap and
+properties of the corresponding eigenfunctions for (possibly not closed)
+hyperbolic manifolds. We also develop a rather speculative picture on
+the relation between spectral gap, volume and Heegaard genus as it arises
+in progress on effective hyperbolization.
+This is in part joint work with Gabriele Viaggi, and joint work with
+Elia Fioravanti, Frieder Jaeckel and Yongquan Zhang.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Dalimil Mazac</b></td><td>IAS Princeton</td><td><b>Spectral bounds on hyperbolic 3-manifolds from the associativity of multiplication</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+I will discuss bounds on the low-energy spectra of Laplacians on compact hyperbolic 3-manifolds and orbifolds. The key ingredient is an infinite collection of identities satisfied by 1) the spectra of the Laplacians on powers of the cotangent bundle, and 2) the integrated triple products of the corresponding eigenfunctions. These spectral identities follow from the consistency of associativity of multiplication of functions on $\Gamma \backslash \mathrm{PSL}_2(\mathbb{C})$ with the spectral decomposition. They can be turned into spectral bounds via linear programming. I will compare the bounds with the spectra of various hyperbolic 3-manifolds and show that they are often nearly sharp. Finally, I will explain how this approach is related to the conformal bootstrap program in conformal field theory, which served as the original inspiration. Based on work with J. Bonifacio and S. Pal.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Wenyu Pan</b></td><td>University of Toronto</td><td><b>Exponential mixing of frame flows for geometrically finite hyperbolic manifolds</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+The frame bundle of an n-dimensional hyperbolic manifold X is the homogeneous space Γ\SO(n, 1)° for some discrete subgroup Γ and the frame flow is given by the right translation action by a one-parameter diagonalizable subgroup. We assume that Γ is Zariski dense and X is geometrically finite, i.e., it need not be compact but has at most finitely many ends consisting of cusps and funnels. We endow the frame bundle with the unique probability measure of maximal entropy called the Bowen-Margulis-Sullivan measure. In joint work with Jialun Li and Pratyush Sarkar, we prove that the frame flow is exponentially mixing. The proof uses a countably infinite coding and Dolgopyat's method à la Sarkar-Winter and Tsujii-Zhang. To overcome the difficulty in applying Dolgopyat's method due to the cusps of non-maximal rank, we prove a uniform large deviation property for symbolic recurrence to certain large subsets of the limit set of Γ.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Ori Parzanchevski</b></td><td>Hebrew University of Jerusalem</td><td></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+To appear</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Bram Petri</b></td><td>IMJ and Sorbonne University</td><td><b>Linear programming bounds for hyperbolic surfaces</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+ I will speak about extremal problems in the (spectral) geometry of hyperbolic surfaces and how linear programming methods based on the Selberg trace formula can help. I will not assume any familiarity with hyperbolic geometry or the Selberg trace formula. This is joint work with Maxime Fortier Bourque.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Julia Slipantschuk</b></td><td>University of Warwick</td><td><b>Resonances for Anosov diffeomorphisms on the torus</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+I will present a complete description of Pollicott-Ruelle resonances for a class of rational Anosov diffeomorphisms on the two-torus. This allows us to show that every homotopy class of two-dimensional Anosov diffeomorphisms contains (non-linear) maps with the sequence of resonances decaying stretched-exponentially, exponentially or having only trivial resonances.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Nikhil Srivastava</b></td><td>UC Berkeley</td><td><b>Many Nodal Domains in Random Regular Graphs</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+A nodal domain of a Laplacian eigenvector of a graph is a maximal connected component where it does not change sign.  Sparse random regular graphs have been proposed as discrete toy models of "quantum chaos", and it has accordingly been conjectured by Y. Elon and experimentally observed by Dekel, Lee, and Linial that the high energy eigenvectors of such graphs have many nodal domains.
+<br><br>
+We prove superconstant (in fact, nearly linear in the number of vertices) lower bounds on the number of nodal domains of sparse random regular graphs, for sufficiently large Laplacian eigenvalues. The proof combines two different notions of eigenvector delocalization in random matrix theory as well as tools from graph limits and combinatorics. This is in contrast to what is known for dense Erdos-Renyi graphs, which have been shown to have only two nodal domains with high probability.
+<br><br>
+Joint work with Shirshendu Ganguly, Theo McKenzie, and Sidhanth Mohanty.</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Yunhui Wu</b></td><td>Tsinghua University</td><td><b></b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+To appear</code>
+</div></td>
+</tr>
+<tr>
+<td><b>Nina Zubrilina</b></td><td>Princeton University</td><td><b></b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+To appear</code>
+</div></td>
+</tr>
+</table>
 
 </div>
 <div class="optb"> 
@@ -75,7 +292,7 @@ durhamsymposium2023@gmail.com
 
   
 <script>
-var coll = document.getElementsByClassName("collapsible");
+var coll = document.getElementsByClassName("collapsible2");
 var i;
 
 for (i = 0; i < coll.length; i++) {
