--- a/DS_SG.html
+++ b/DS_SG.html
@@ -219,6 +219,18 @@ To appear</code>
 </div></td>
 </tr>
 <tr>
+<td><b>Peter Sarnak</b></td><td>Princeton University and<br> IAS Princeton</td><td><b>*Online*</b></td>
+</tr>
+<tr><td></td><td></td><td>
+<div class="collapsible2">
+[Abstract]
+</div>
+<div class="abs">
+<code>
+To appear</code>
+</div></td>
+</tr>
+<tr>
 <td><b>Julia Slipantschuk</b></td><td>University of Warwick</td><td><b>Resonances for Anosov diffeomorphisms on the torus</b></td>
 </tr>
 <tr><td></td><td></td><td>
@@ -247,7 +259,7 @@ Joint work with Shirshendu Ganguly, Theo McKenzie, and Sidhanth Mohanty.</code>
 </div></td>
 </tr>
 <tr>
-<td><b>Yunhui Wu</b></td><td>Tsinghua University</td><td><b></b></td>
+<td><b>Yunhui Wu</b></td><td>Tsinghua University</td><td><b>*Online* Recent developments on random hyperbolic surfaces of large genus</b></td>
 </tr>
 <tr><td></td><td></td><td>
 <div class="collapsible2">
@@ -255,7 +267,7 @@ Joint work with Shirshendu Ganguly, Theo McKenzie, and Sidhanth Mohanty.</code>
 </div>
 <div class="abs">
 <code>
-To appear</code>
+In this talk, we report several very recent asymptotic results on certain classical geometric quantities viewed as random variables on the moduli space of Riemann surfaces for large genus (and many cusps). This talk is based on several joint works with Hugo Parlier, Xin Nie, Yang Shen and Yuhao Xue.</code>
 </div></td>
 </tr>
 <tr>
