--- a/DS_SG.html
+++ b/DS_SG.html
@@ -219,7 +219,7 @@ To appear</code>
 </div></td>
 </tr>
 <tr>
-<td><b>Peter Sarnak</b></td><td>Princeton University and<br> IAS Princeton</td><td><b>*Online*</b></td>
+<td><b>Peter Sarnak</b></td><td>Princeton University and<br> IAS Princeton</td><td><b>*Online*  Prescribing the spectrum of locally homogeneous geometries</b></td>
 </tr>
 <tr><td></td><td></td><td>
 <div class="collapsible2">
@@ -227,7 +227,7 @@ To appear</code>
 </div>
 <div class="abs">
 <code>
-To appear</code>
+We review some recent developments (conformal bootstrap and random covers) concerning the bass-note spectrum of invariant operators on locally homogeneous geometries and in particular hyperbolic manifolds and of large 3-regular graphs. Of special interest are rigidity features for creating spectral gaps.</code>
 </div></td>
 </tr>
 <tr>
