--- a/DS_SG.html
+++ b/DS_SG.html
@@ -38,7 +38,7 @@ The goal is to produce a collaborative environment for discussions of recent dev
        <col span="1" style="width: 60%;">
     </colgroup>
 <tr>
-<td><u><b>Speakers</b></u><br></td> <td>Affiliation</td>  <td><b>Titles and Abstracts</b></td>	
+<td><u><b>Speakers</b></u><br></td> <td>Affiliation</td>  <td><b><u>Titles and Abstracts</u></b></td>	
 </tr>
 <tr>
 <td><b>Anshul Adve </b></td><td>Princeton University</td><td><b>A spectral gap for spinors on hyperbolic surfaces</b></td>
@@ -283,9 +283,9 @@ To appear</code>
 </div></td>
 </tr>
 </table>
-
 </div>
 <div class="optb"> 
+<a href="participants.txt"><b><u>Participants</u></b></a>
 <br>
 <u><b>Organising Committee</b></u><br>
 Rhiannon Dougall (Durham University) <br>
