--- a/DS_SG.html
+++ b/DS_SG.html
@@ -195,7 +195,7 @@ The frame bundle of an n-dimensional hyperbolic manifold X is the homogeneous sp
 </div></td>
 </tr>
 <tr>
-<td><b>Ori Parzanchevski</b></td><td>Hebrew University of Jerusalem</td><td></td>
+<td><b>Ori Parzanchevski</b></td><td>Hebrew University of Jerusalem</td><td><b>Random walks on Ramanujan graphs and complexes</b></td>
 </tr>
 <tr><td></td><td></td><td>
 <div class="collapsible2">
@@ -203,7 +203,7 @@ The frame bundle of an n-dimensional hyperbolic manifold X is the homogeneous sp
 </div>
 <div class="abs">
 <code>
-To appear</code>
+Recent works of  Lubetzky-Peres, Sardari and Nestoridi-Sarnak have shown that non-backtracking random walks on Ramanujan graphs exhibit optimal cutoff; namely, the L^1-mixing time of the walk is around log_k(N) steps (for a k-regular walk on N vertices). I will explain these results, their generalization to Ramanujan complexes of arbitrary dimension, and consequences for optimal expansion in finite simple groups.</code>
 </div></td>
 </tr>
 <tr>
