--- a/DS_SG.html
+++ b/DS_SG.html
@@ -28,8 +28,11 @@
 <u><b>Aims</b></u><br>
 The goal is to produce a collaborative environment for discussions of recent developments about spectral gaps, that bring together groups of researchers with different perspectives and backgrounds.
 </div> 
-<div class="optb"> 
+
 <br>
+<div class="optb"> 
+<a href="reimburse.xlsx"><b><u>Reimbursement form</u></b></a>
+<br><br>
 <table class="optb" style="width: 90%">
 
     <colgroup>
