--- a/DS_SG.html
+++ b/DS_SG.html
@@ -144,7 +144,7 @@ The diameter of a finite group G equipped with a generating set S is the smalles
 </div></td>
 </tr>
 <tr>
-<td><b>Petr Kravchuk</b></td><td>King's College London</td><td><b></b></td>
+<td><b>Petr Kravchuk</b></td><td>King's College London</td><td><b>Spectral gaps and Conformal bootstrap</b></td>
 </tr>
 <tr><td></td><td></td><td>
 <div class="collapsible2">
@@ -152,7 +152,7 @@ The diameter of a finite group G equipped with a generating set S is the smalles
 </div>
 <div class="abs">
 <code>
-To appear</code>
+In this talk I will review an approach to deriving upper bounds on the gap in the Laplace spectrum of hyperbolic 2-orbifolds, inspired by numerical bootstrap methods from conformal field theory. As I will explain, these bounds are obtained from consistency conditions for integrals of quadruple products of holomorphic differentials and their derivatives, and can be numerically very close to what is believed to be the largest gap. This might suggest that the bounds can be improved to be tight, but I will provide strong evidence that this is impossible. Based on work with Dalimil Mazac, Sridip Pal and Alexander Radcliffe.</code>
 </div></td>
 </tr>
 <tr>
