--- a/DS_SG.html
+++ b/DS_SG.html
@@ -288,7 +288,7 @@ To appear</code>
 </table>
 </div>
 <div class="optb"> 
-<a href="participants.txt"><b><u>Participants</u></b></a>
+<a href="participants.html"><b><u>Participants</u></b></a>
 <br>
 <u><b>Organising Committee</b></u><br>
 Rhiannon Dougall (Durham University) <br>
