--- a/DS_SG.html
+++ b/DS_SG.html
@@ -274,7 +274,7 @@ In this talk, we report several very recent asymptotic results on certain classi
 </div></td>
 </tr>
 <tr>
-<td><b>Nina Zubrilina</b></td><td>Princeton University</td><td><b></b></td>
+<td><b>Nina Zubrilina</b></td><td>Princeton University</td><td><b>Root Number Correlation Bias of Fourier Coefficients of Modular Forms</b></td>
 </tr>
 <tr><td></td><td></td><td>
 <div class="collapsible2">
@@ -282,7 +282,9 @@ In this talk, we report several very recent asymptotic results on certain classi
 </div>
 <div class="abs">
 <code>
-To appear</code>
+Limiting distributions of spectral parameters of modular forms, in the prime, weight, and level aspects, are all well known to have mean 0.  Nonetheless, it was recently discovered by Sutherland that when one restricts to forms of a prescribed root number, there are gaps between the means of such averages and 0.  These computations extend a recent machine learning based study of He, Lee, Oliver, and Pozdnyakov, who observed a striking
+oscillating pattern in the average value of the P-th Frobenius trace of elliptic curves of
+prescribed rank and conductor in an interval range. In my talk, I will point to a source of this phenomenon in the case of all forms and compute the correlation function exactly. </code>
 </div></td>
 </tr>
 </table>
