--- a/papers.html
+++ b/papers.html
@@ -29,6 +29,19 @@
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>25. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
+ (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
+<br>
+&nbsp
+</tr>
+
 <tr >
 <td>
 </td>
@@ -53,12 +66,6 @@ Submitted.
 <br>
 Submitted. Contains an appendix written with <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>
 </tr>
-<tr >
-<td>
-</td>
-
-
-
 <tr >
 <td>
 </td>
@@ -97,13 +104,15 @@ Submitted
 </tr>
 <tr >
 <td>
+<a href="https://doi.org/10.1007/s00220-023-04801-x"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>21. <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
  (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> and <a href="https://yufeizhao.com/">Yufei Zhao</a>)<br>
-<u>Communications in Mathematical Physics</u>, to appear.
+<u>Communications in Mathematical Physics</u>, 2023.
 </b>
 <br>
 
@@ -122,10 +131,8 @@ Submitted
 </td>	
 </tr>	
 
-
 <tr >
 <td><a href="https://doi.org/10.1017/fmp.2023.13"><img src="j_ico.png"title="Journal" width="100%"></a>
-
 
 </td>
 <td>
@@ -134,7 +141,7 @@ Submitted
 <td>19. <b>The asymptotic statistics of random covering surfaces.
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br>
-<u>Forum of Mathematics, Pi</u>, to appear.
+<u>Forum of Mathematics, Pi</u>, 2023.
 </td>	
 </tr>	
 
