--- a/DS_SG.html
+++ b/DS_SG.html
@@ -31,6 +31,7 @@ The goal is to produce a collaborative environment for discussions of recent dev
 
 <br>
 <div class="optb"> 
+<a href="Schedule.pdf"><b><u>Schedule</u></b></a></br>
 <a href="reimburse.xlsx"><b><u>Reimbursement form</u></b></a>
 <br><br>
 <table class="optb" style="width: 90%">
