--- a/DS_SG.html
+++ b/DS_SG.html
@@ -93,7 +93,7 @@ For a rank one geometrically finite locally symmetric space Γ\X, the bottom of 
 </div></td>
 </tr>
 <tr>
-<td><b>Alex Gamburd</b></td><td>CUNY Graduate Center</td><td><b></b></td>
+<td><b>Alex Gamburd</b></td><td>CUNY Graduate Center</td><td><b>Strong Approximation for Varieties of Markoff Type</b></td>
 </tr>
 <tr><td></td><td></td><td>
 <div class="collapsible2">
@@ -101,7 +101,7 @@ For a rank one geometrically finite locally symmetric space Γ\X, the bottom of 
 </div>
 <div class="abs">
 <code>
-To appear</code>
+The Markoff equation $x^2+y^2+z^2=3xyz$, which arose in his spectacular thesis (1879), is ubiquitous in a tremendous variety of contexts. After reviewing some of these, we will discuss  recent progress towards establishing forms of strong approximation on varieties of Markoff type, as well as ensuing implications, diophantine and dynamical.</code>
 </div></td>
 </tr>
 <tr>
