--- a/DS_SG.html
+++ b/DS_SG.html
@@ -32,7 +32,13 @@ The goal is to produce a collaborative environment for discussions of recent dev
 <br>
 <div class="optb"> 
 <a href="Schedule.pdf"><b><u>Schedule</u></b></a></br>
+Please submit
+the reimbursement form available at
+directly to Suzanne Joyce at
+maths.finance@durham.ac.uk along with electronic copies of your receipts.<br>
 <a href="reimburse.xlsx"><b><u>Reimbursement form</u></b></a>
+<br>
+<a href="ds23b.jpg"><b><u>Group Photo</u></b></a>
 <br><br>
 <table class="optb" style="width: 90%">
 
@@ -101,7 +107,7 @@ For a rank one geometrically finite locally symmetric space Γ\X, the bottom of 
 </div>
 <div class="abs">
 <code>
-The Markoff equation $x^2+y^2+z^2=3xyz$, which arose in his spectacular thesis (1879), is ubiquitous in a tremendous variety of contexts. After reviewing some of these, we will discuss  recent progress towards establishing forms of strong approximation on varieties of Markoff type, as well as ensuing implications, diophantine and dynamical.</code>
+The Markoff equation \( x^2+y^2+z^2=3xyz \), which arose in his spectacular thesis (1879), is ubiquitous in a tremendous variety of contexts. After reviewing some of these, we will discuss  recent progress towards establishing forms of strong approximation on varieties of Markoff type, as well as ensuing implications, diophantine and dynamical.</code>
 </div></td>
 </tr>
 <tr>
