--- a/DS_SG.html
+++ b/DS_SG.html
@@ -33,7 +33,7 @@ The goal is to produce a collaborative environment for discussions of recent dev
 <div class="optb"> 
 <a href="Schedule.pdf"><b><u>Schedule</u></b></a></br>
 Please submit
-the reimbursement form available at
+the reimbursement form below
 directly to Suzanne Joyce at
 maths.finance@durham.ac.uk along with electronic copies of your receipts.<br>
 <a href="reimburse.xlsx"><b><u>Reimbursement form</u></b></a>
