--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
+<a href="./DS_SG.html">[Conference `23]</a>
 </nav>
 </center>
 <body id="top">
@@ -29,12 +30,9 @@
 
 <div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>.  <br>
 In academic year 2023-2024 I'll be a Von Neumann fellow at IAS Princeton.<br>
+I'm interested in a broad range of problems in geometry, dynamics, spectral theory, and number theory.   <br>
+I am from Northern Ireland. </br>
 
- I'm interested in a broad range of problems in geometry, dynamics, spectral theory, and number theory.   <br>
- 
- I am from Northern Ireland. </br>
- 
- I am currently, with colleagues, organizing <a href="./DS_SG.html">Durham Symposium 2023: Spectral gaps</a>
 
 </div> 
 <div class="optw"><b>Contact</b></div>
