--- a/papers.html
+++ b/papers.html
@@ -40,32 +40,19 @@
 <td>25. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
  (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
-&nbsp
+Submitted
 </tr>
-
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td>24. <b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
- (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
-<br>
-Submitted.
-</tr>
-
 <tr >
 <td>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
+<td>24. <b>Strongly convergent unitary representations of limit groups.</b>  
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
  </b>
 <br>
-Submitted. Contains an appendix written with <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>
+Submitted. Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
 </tr>
 <tr >
 <td>
@@ -73,7 +60,7 @@ Submitted. Contains an appendix written with <a href="https://www.maths.dur.ac.u
 <td>
 <a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>22. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
+<td>23. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
  (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
 Submitted
@@ -103,6 +90,18 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>22. <b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
+ (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
+<br>
+<u>Journal of the European Mathematical Society</u>, to appear.
+</tr>
+
 <tr >
 <td>
 <a href="https://doi.org/10.1007/s00220-023-04801-x"><img src="j_ico.png"title="Journal" width="100%"></a>
@@ -150,15 +149,16 @@ Submitted
 
 <tr >
 <td>
+<a href="https://doi.org/10.4007/annals.2023.198.2.6"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>18. <b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
- (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
+ (With <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>)
 </b>
 <br>
-<u>Annals of Mathematics</u>, to appear.
+<u>Annals of Mathematics</u>, 2023.
 <a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
 <a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
 </td>	
