--- a/cv.html
+++ b/cv.html
@@ -40,6 +40,7 @@ Ph.D. title: <i>Quantitative spectral gap for thin groups of hyperbolic isometri
 <div class="optw"><b>Most significant awards</b></div>
 
 <div class="optw">
+Philip Leverhulme Prize 2023<br>
 LMS Whitehead Prize 2021 <br>
 ERC Starting grant 2020 UBIQGAP `The ubiquity of optimal spectral gaps'  1,437,000&#8364<br>
 NSF Standard grant 2017 `Thin counting in moduli spaces'  145,295&#36
