--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body id="top">
 <center>
 
-
-
+<br>
+<b>News:</b> I am looking for a PhD student to begin in September/October 2024. Please contact me if interested!
+<br>
+<br>
 <div> <b>Michael Magee</b> </div>
 
 
