--- a/papers.html
+++ b/papers.html
@@ -1,4 +1,5 @@
 <html>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <head>
 <link rel="stylesheet" type="text/css" href="./mstyle.css">
 <title>Michael Magee</title>
@@ -31,6 +32,17 @@
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
 
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>26. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not pure matrix field</b>  
+ (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
+<br>
+Submitted
+</tr>
 <tr >
 <td>
 </td>
@@ -96,7 +108,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>22. <b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
+<td>22. <b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \)</b>  
  (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
 <br>
 <u>Journal of the European Mathematical Society</u>, to appear.
@@ -357,7 +369,7 @@ spectral gap 3/16 - &#1013.
 <a href="http://arxiv.org/abs/1601.03705"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>	
 <td>
-03. <b>Uniform congruence counting for Schottky semigroups in  SL_2(Z). </b>  
+03. <b>Uniform congruence counting for Schottky semigroups in \( \mathrm{SL}_2(\mathbf{Z}) \). </b>  
 (With <a href="https://gauss.math.yale.edu/~ho2/">Hee Oh</a> and Dale Winter)<br>
 <u>Crelle's Journal</u>, 2017. Contains an appendix  written with Jean Bourgain and <a href="http://sites.math.rutgers.edu/~ak1230/">Alex Kontorovich</a>
 </td>
