--- a/papers.html
+++ b/papers.html
@@ -36,17 +36,6 @@
 <td>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td>26. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not pure matrix field</b>  
- (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
-<br>
-Submitted
-</tr>
-<tr >
-<td>
-</td>
-<td>
 <a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>25. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
@@ -102,6 +91,18 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>26. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
+ (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
+<br>
+<u>Comptes Rendus - Série Mathématique</u>, to appear.
+</tr>	
 <tr >
 <td>
 </td>
