--- a/papers.html
+++ b/papers.html
@@ -38,7 +38,7 @@
 <td>
 <a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>25. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
+<td>26. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
  (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
 Submitted
@@ -49,7 +49,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>24. <b>Strongly convergent unitary representations of limit groups.</b>  
+<td>25. <b>Strongly convergent unitary representations of limit groups.</b>  
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
  </b>
 <br>
@@ -61,7 +61,7 @@ Submitted. Contains an appendix written with <a href="https://sites.google.com/v
 <td>
 <a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>23. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
+<td>24. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
  (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
 Submitted
@@ -98,10 +98,10 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>26. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
+<td>23. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
-<u>Comptes Rendus - Série Mathématique</u>, to appear.
+<u>Comptes Rendus Mathématique</u>, to appear.
 </tr>	
 <tr >
 <td>
