--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I am from Northern Ireland. </br>
 <div class="optw">
 <a href="https://sites.google.com/view/will-hide/home">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
 <br>
-Ewan Cassidy (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
+<a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a>(2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
 Anitej Banerjee (2022-2026)
 </div> 
 <div class="optw"><b>Current postdocs</b></div>
