--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -52,7 +52,7 @@ in Voiculescu's Free Probability Theory from the context of free groups, to fund
 <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> (PDRA)
 <br>
 Anitej Banerjee (Ph.D. Student)<br>
-Ewan Cassidy (Ph.D. Student)
+<a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (Ph.D. Student)
 </div> 
 
 
@@ -67,10 +67,46 @@ Ewan Cassidy (Ph.D. Student)
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><u>Outputs of the program</u></th>
+<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated Feb 2024]</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field.</b>  
+Michael Magee and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
+<br>
+<u>Comptes Rendus Mathématique</u>, to appear.
+</tr>	
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strongly convergent unitary representations of right-angled Artin groups.</b>  
+Michael Magee and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
+<br>
+Preprint
+</tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.01839"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Projection formulas and a refinement of Schur-Weyl-Jones duality for symmetric groups.</b>  
+<a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a>
+<br>
+Preprint
+</td>	
+</tr>	
 
 <tr >
 <td>
@@ -78,13 +114,12 @@ Ewan Cassidy (Ph.D. Student)
 <td>
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
- (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)<br>
- Preprint
-
+<td><b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \).</b>  
+Michael Magee and <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>
 <br>
-
+<u>Journal of the European Mathematical Society</u>, to appear.
 </tr>
+
 <tr >
 <td>
 </td>
@@ -101,9 +136,9 @@ Preprint, contains an appendix by <a href="https://www.maths.dur.ac.uk/users/wil
 <td>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2209.15568"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+<a href="https://arxiv.org/abs/2312.11412"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td><b>Short geodesics and small eigenvalues on random hyperbolic punctured spheres.
+<td><b>Large-n asymptotics for Weil-Petersson volumes of moduli spaces of bordered hyperbolic surfaces.
 </b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
 <br>Preprint
 </td>	
@@ -112,11 +147,24 @@ Preprint, contains an appendix by <a href="https://www.maths.dur.ac.uk/users/wil
 <td>
 </td>
 <td>
+<a href="https://arxiv.org/abs/2209.15568"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Short geodesics and small eigenvalues on random hyperbolic punctured spheres.
+</b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
+<br><u>Commentarii Mathematici Helvetici</u>, to appear.
+</td>	
+</tr>	
+<tr >
+<td>
+<a href="https://doi.org/10.1007/s00220-023-04801-x"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
+</td>
+<td>
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td> <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
- Michael Magee and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a><br>
-Preprint
+<td><b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
+Michael Magee, <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>, and <a href="https://yufeizhao.com/">Yufei Zhao</a><br>
+<u>Communications in Mathematical Physics</u>, 2023.
 </b>
 <br>
 
@@ -137,52 +185,38 @@ Preprint
 </tr>	
 
 
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
-</td>
-<td><b>Random Unitary Representations of Surface Groups II: The large n limit.
-</b> Michael Magee
-<br>
-Preprint
-</td>	
-</tr>	
-
 	
 
-
 <tr >
-<td>
+<td><a href="https://doi.org/10.1017/fmp.2023.13"><img src="j_ico.png"title="Journal" width="100%"></a>
+
 </td>
 <td>
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>The asymptotic statistics of random covering surfaces.
-</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+</b>Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br>
-<u>Forum of Mathematics, Pi</u>, to appear.
+<u>Forum of Mathematics, Pi</u>, 2023.
 </td>	
 </tr>	
 
-
-
 <tr >
 <td>
+<a href="https://doi.org/10.4007/annals.2023.198.2.6"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
- (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
+Michael Magee and <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
 </b>
 <br>
-<u>Annals of Mathematics</u>, to appear.
+<u>Annals of Mathematics</u>, 2023.
 <a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
 <a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
 </td>	
-</tr>	
+</tr>
 		
 <tr >
 <td>
@@ -210,7 +244,21 @@ spectral gap 3/16 - &#1013.
 </b> Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br><u>Geometriae Dedicata</u>, 2022.
 </td>	
+</tr>
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Random Unitary Representations of Surface Groups II: The large n limit.
+</b> Michael Magee
+<br>
+<u>Geometry and Topology</u>, to appear.
+</td>	
 </tr>	
+	
 <td>
 <a href="https://doi.org/10.1007/s00220-021-04295-5"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
