--- a/seminar.html
+++ b/seminar.html
@@ -31,9 +31,260 @@
 </tr>
 <tr >    <th colspan="3", text-align="center"><h1>Spectra/Moduli seminar</h1></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><h3>We meet at 15:00 Monday in MCS2068</h3></th>
+<tr >    <th colspan="3", text-align="center"><h3>We meet at 15:00 Monday in MCS3070</h3></th>
 </tr>
+</td>	
+</tr>
+<tr >    <th colspan="3", text-align="center"><h2>2024</h2></th>
+</tr>
+<tr >
 
+
+<td>26/02/2024
+</td>
+<td>
+<a href="https://webusers.imj-prg.fr/~anna.roig-sanchis/">Anna Roig Sanchis</a>
+<td><b>On the length spectrum of random hyperbolic 3-manifolds<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">We are interested in studying the behavior of geometric invariants of hyperbolic 3-manifolds, such as the length of their geodesics. A way to do so is by using probabilistic methods. That is, we consider a set of hyperbolic manifolds, put a probability measure on it, and ask what is the probability that a random manifold has a certain property. There are several models of construction of random manifolds. In this talk, I will explain one of the principal probabilistic models for 3 dimensions and I will present a result concerning the length spectrum -the set of lengths of all closed geodesics- of a 3-manifold constructed under this model.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>19/02/2024
+</td>
+<td>
+<a href="https://groeger.u.matinf.uj.edu.pl/">Maik Gröger</a>
+<td><b>Continuity of Følner averages
+<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">The notion of generic/mean points goes back to the seminal work of Krylov and Bogolyubov.
+The first to investigate the question of what happens when all points of a dynamical
+system are generic for some invariant measure seem to be Dowker and Lederer in 1964.
+As it turns out, combining this property with other topological regularity
+criteria yields measure-theoretic rigidity results of the dynamical system.
+For example, minimality of the system implies its unique ergodicity in this setting.
+Another natural topological criterion in place of minimality is to assume that
+the map, which assigns each point its invariant measure to which it is generic, is continuous.
+By several recent works by different authors, the following picture emerges for
+abelian group actions in this setting: each point is generic for some ergodic measure
+and even stronger, each orbit closure is uniquely ergodic.
+In my talk, I will show that this is no longer the case for general actions by
+topological amenable groups, providing concrete counter-examples involving the group of
+all orientation preserving homeomorphisms on the unit interval as well as the Lamplighter group.
+
+This is joint work with G. Fuhrmann and T. Hauser.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>12/02/2024
+</td>
+<td>
+<a href="https://sugatareading.github.io/reading-homepage/home.html">Sugata Mondal</a>
+<td><b>Small eigenvalues and topology of surfaces<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">Small eigenvalues of a surface are eigenvalues of the Laplacian on the surface that are below the bottom of the spectrum of the Laplacian of the universal cover of the surface. In this talk I will give a brief history of the problems related to these eigenvalues and known results.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>29/01/2024
+</td>
+<td>
+<a href="https://sjcantrell.github.io/">Stephen Cantrell</a>
+<td><b>The space of metric structures on hyperbolic groups<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">We will introduce and discuss a 'moduli space' of metric structures on hyperbolic groups that can be seen as a coarse geometric extension of Teichmüller Space or Outer Space. This space will provide us with a setting in which we can compare various distances coming from different parts of geometry. After equipping our space with a metric, we will look at its geometric properties and see how, by studying these properties, we can learn about metrics on groups. This is based on joint work with Eduardo Reyes.
+</div>
+</td>	
+</tr>
+<tr >    <th colspan="3", text-align="center"><h2>2023</h2></th>
+</tr>
+<tr >
+
+
+<td>04/12/2023
+</td>
+<td>
+<a href="https://www.mv.helsinki.fi/home/sahlsten/">Tuomas Sahlsten</a>
+<td><b>Uniform spectral gaps and overlaps<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc"> Bernoulli convolutions are examples of stationary measures to the iterated function system {lambda x -1,lambda x +1} in R for 1/2 < lambda < 1. Studying smoothness of Bernoulli convolutions (e.g. absolute continuity, dimension, rate of decay of Fourier transform) is notoriously difficult due to overlaps in the IFS, which has seen much recent progress especially on the dimension theory by Hochman, Shmerkin, Varjú and various others. The rate of decay of Fourier transform of the Bernoulli convolution is mostly unexplored territory, and only some cases of Bernoulli convolutions are known to have explicit rate of decay, such as Garsia numbers where the decay is polynomial or for random lambda by the Erdös-Kahane method.
+        In this talk I will discuss a consequence of a recent joint work with S. Baker (Loughborough), where by introducing a small non-linear perturbation to the IFS {lambda x -1,lambda x +1} defining the Bernoulli convolution, we have that any stationary measure to the perturbed IFS must have polynomial Fourier decay rate, even with any type of overlaps. The proof is based on Bourgain’s discretised sum-product theorem combined with a new uniform spectral gap theorem for complex transfer operators with overlaps, where we introduce a co-cycle version of Dolgopyat’s method that allows us to deal with the overlap structure.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>27/11/2023
+</td>
+<td>
+<a href="https://en.wikipedia.org/wiki/Thomas_Ward_(mathematician)">Tom Ward</a>
+<td><b>The space of group automorphisms<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">An overview of some of the issues involved in studying the space of all compact group automorphisms modulo measurable and topological equivalence.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>20/11/2023
+</td>
+<td>
+<a href="https://www.imo.universite-paris-saclay.fr/~cyril.letrouit/">Cyril Letrouit</a>
+<td><b>Maximal multiplicity of Laplacian eigenvalues in negatively curved manifolds<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">The problem of finding the maximal possible multiplicity of the first Laplacian eigenvalues has been studied at least since the 1970's. I will present a recent work in collaboration with Simon Machado (ETH Zürich) in which we proved, for negatively curved surfaces, the first upper bound which is sublinear in the genus g. Our method also yields an upper bound on the number of eigenvalues in small spectral windows, and this upper bound is shown to be nearly sharp. We also obtain results for higher-dimensional manifolds. Our proof combines a trace argument for the heat kernel and a geometric idea introduced in the context of graphs of bounded degree in a paper by Jiang-Tidor-Yao-Zhang-Zhao (2021). Our work provides new insights on a conjecture by Colin de Verdière and a new way to transfer spectral results from graphs to surfaces.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>23/10/2023
+</td>
+<td>
+<a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calderón</a>
+<td><b>Explicit spectral gap for Schottky subgroups of SL(2,Z)<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">Let $F$ be a family of finite coverings of a hyperbolic surface S. A spectral gap of F is an interval I = [0, a] such that the eigenvalues in I  (counted with multiplicity) of the Laplacian \Delta_S of S and \Delta_X, any X in F, are the same. I will present a joint work with M. Magee where we give a spectral gap for congruence coverings when S is the surface associated to a Schottky subgroup of SL(2,Z) with thick enough limit set. The proof exploits the link between eigenvalues of the Laplacian and zeros of dynamical zeta functions attached to S via the thermodynamic formalism.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+<tr >
+
+<td>09/10/2023
+</td>
+<td>
+<a href="https://www.imo.universite-paris-saclay.fr/~yves.benoist/">Yves Benoist</a>
+<td><b>Convolution and square on abelian groups<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">The aim of this talk will be to construct functions on a cyclic group of odd order
+whose ''convolution square'' is proportional to their square.
+For that, we will have to interpret the cyclic group
+as a subgroup of an abelian variety with complex multiplication,
+and to use the modularity properties of their theta functions.
+</div>
+</td>	
+</tr>
+<tr >
+<td>
 <tr >
 <td>13/03/2023
 </td>
