--- a/papers.html
+++ b/papers.html
@@ -32,6 +32,17 @@
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
 
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>27. <b>The limit points of the bass notes of arithmetic hyperbolic surfaces</b>  
+<br>
+&nbsp
+</tr>
 <tr >
 <td>
 </td>
