--- a/cv.html
+++ b/cv.html
@@ -31,6 +31,7 @@ Ph.D. title: <i>Quantitative spectral gap for thin groups of hyperbolic isometri
 <br>
 <div class="optw"><b>Appointments</b></div>
 <div class="optw">
+2023-2024 von Neumann Fellow, IAS Princeton<br>   
 2021- &nbsp &nbsp &nbsp &nbsp Professor, Durham University <br>
 2017-2021 Assistant Professor, Durham University <br>
 2015-2017 Gibbs Assistant Professor, Yale University <br>
