--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="./DS_SG.html">[Conference `23]</a>
 </nav>
 </center>
-<body id="top">
+<body id="top" >
 <center>
 
 
@@ -22,8 +22,8 @@
 <div> <b>Michael Magee</b> </div>
 
 
-<img src="port3.gif" width="25%"></img>
-    
+<img src="port4.png" width="50%"></img>
+   
 <br>
     
 <div class="optw"><b>About me</b></div>
