--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div> <b>Michael Magee</b> </div>
 
 
-<img src="port4.png" width="50%"></img>
+<img src="port4.png" width="70%"></img>
    
 <br>
     
@@ -45,10 +45,9 @@ I am from Northern Ireland. </br>
 
 
 
-<div class="optw"><b>PhD students</b></div>
+<div class="optw"><b>Current PhD students</b></div>
 <div class="optw">
-<a href="https://sites.google.com/view/will-hide/home">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
-<br>
+
 <a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
 Anitej Banerjee (2022-2026)
 </div> 
@@ -59,6 +58,11 @@ Anitej Banerjee (2022-2026)
 <br>
 <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
 <br>
+<div class="optw"><b>Completed PhD students</b></div>
+<div class="optw">
+<a href="https://sites.google.com/view/will-hide/home">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
+<br>
+</div> 
 
 
 </div> 
